--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,5 @@
 html {
   box-sizing: border-box;
-
   font: normal 100%/1.5 sans-serif;
 }
 
@@ -19,7 +18,6 @@ body {
 
 .robot {
   width: 320px;
-  position: relative;
 }
 
 .robot-body {
@@ -30,7 +28,14 @@ body {
   width: 46px;
 }
 
-.robot-head-right,
+.robot-head-right {
+  width: 125px;
+  position: absolute;
+  top: 0;
+  left: 200px;
+}
 .robot-head-left {
   width: 125px;
+  position: absolute;
+  top: 0;
 }
